# salesforce_db_app

./: .gitignore  Home.py  README.md  app.py  permissions.py  pyproject.toml  requirements.txt
pages/: 1_⚙️_Configuration.py  2_📝_Salesforce_SOQL_Editor.py  3_📊_Field_Analysis.py  4_📦_Object_Manager.py  5_👤_Session_Info.py
