[project]
name = "salesforce-db-app"
version = "2.0"
requires-python = ">=3.14"
dependencies = [
    "pandas==2.3.3",
    "plotly==6.8.0",
    "requests==2.34.2",
    "simple-salesforce==1.12.9",
    "streamlit==1.58.0",
    "zeep==4.3.3",
]

# You can leave this section here for future local-only tools (like pytest or ruff)
[dependency-groups]
dev = []